# kedarium

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt  Main.cpp
include/Kedarium/: Camera.hpp  Color.hpp  Core.hpp  Debug.hpp  File.hpp  Graphics.hpp  Image.hpp  Keys.hpp  Model.hpp  Solids.hpp  Space.hpp  Window.hpp
resources/Shaders/: default.vert
src/: CMakeLists.txt  Camera.cpp  Color.cpp  Constants.cpp  Core.cpp  File.cpp  Graphics.cpp  Image.cpp  Model.cpp  Solids.cpp  Space.cpp  Window.cpp
